[024-(0.3.2)]:: HOT FIX >> fixed the consoleToggleWindow z-index issue that didn't allow for the input fields to be clicked.

--- a/style.css
+++ b/style.css
@@ -186,8 +186,11 @@ button{
   position: absolute;
   width: 100vw;
   height: 100vh;
-  z-index: 5;
+  z-index: -50;
   background-color:rgba(50,50,50,0.5);
+}
+#consoleToggleWindow.visible{
+  z-index: 5;
 }
 
 
